--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
   <div id="gameContainer">
    <div id="spaceCanvas"></div>
    <div id="ui">
+    <div id="credit">Built by [Aadi]</div>
+    <div id="header">
+        </div>
+    </div>
     <div id="header">
      <h1 id="appTitle">Solar System Explorer</h1>
      <p id="welcomeMessage">Explore the cosmos and learn about orbital mechanics</p>
